--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
     <button onclick="addClicks(1)" class="colored">
       Click
     </button>
-    <button>
+    <button onclick="buyClicker(0)" class="colored">
       Autoclicker [$<span id="autoclickerprice">20</span>] -- <span id="autoclickers">0</span>
+    </button>
+    <button onclick="buyClicker(1)" class="colored">
+      Megaclicker [$<span id="megaclickerprice">250</span> -- <span id="megaclickers">0</span>
     </button>
     <script>
       var clicks = 0
       var autoclickers = 0
       var autoclickerprice = 20
+      var megaclickers = 0
+      var megaclickerprice = 250
 
       function addClicks(amount) {
         clicks = clicks + amount
@@ -42,16 +47,24 @@
           autoclickers = autoclickers + 1
           refreshValues()
         }
+        if (clickerid === 1 && clicks >= megaclickerprice) {
+          clicks = clicks - megaclickerprice
+          megaclickerprice = Math.round(megaclickerprice*1.18)
+          megaclickers = megaclickers + 1
+          refreshValues()
+        }
       }
 
       function refreshValues() {
         document.getElementById("clicks").innerHTML = clicks
         document.getElementById("autoclickers").innerHTML = autoclickers
         document.getElementById("autoclickerprice").innerHTML = autoclickerprice
+        document.getElementById("megaclickers").innerHTML = megaclickers
+        document.getElementById("megaclickerprice").innerHTML = megaclickerprice
       }
 
       setInterval(function() {
-        clicks = clicks + autoclickers
+        clicks = clicks + (autoclickers + 5*megaclickers)
         document.getElementById("clicks").innerHTML = clicks
       }, 1000)
     </script>
