--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>
       Rebirths: <span id="rebirths">0</span>
     </p>
-    <button>
+    <button onclick="rebirth()">
       Rebirths available [<span id="rebirthsavailable">0</span>]
     </button>
     <script>
@@ -45,7 +45,7 @@
 
       function addClicks(amount) {
         clicks = clicks + amount
-        document.getElementById("clicks").innerHTML = clicks
+        refreshValues()
       }
 
       function buyClicker(clickerid) {
@@ -64,9 +64,9 @@
       }
 
       function rebirth() {
-        if (!rebirthsavailable === 0) {
+        if (rebirthsavailable > 0) {
           rebirths = rebirths + rebirthsavailable
-          rebirthsavailable = 0'
+          rebirthsavailable = 0
           clicks = 0
           autoclickers = 0
           autoclickerprice = 20
@@ -74,6 +74,7 @@
           megaclickerprice = 250
           refreshValues()
         }
+      }
 
       function refreshValues() {
         document.getElementById("clicks").innerHTML = clicks
