--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>
       Rebirths: <span id="rebirths">0</span>
     </p>
-    <button onclick="rebirth()">
+    <button onclick="rebirth()" class="colored">
       Rebirths available [<span id="rebirthsavailable">0</span>]
     </button>
     <script>
